Bugfixes
- Fixed empty Goalcircles not showing on NowVisualizing legend
- Changed Tablerow light gray to dark grey and added hovering
- Modified so selectedteams goals background are always red and other teams black

--- a/src/components/content/table-body-content/Row.css
+++ b/src/components/content/table-body-content/Row.css
@@ -1,12 +1,4 @@
-.test:hover {
-    background-color: #ECEEF2 !important;
-}
-
-.test:active {
-    background-color: #ECEEF2 !important;
-}
-
 .tableRowStyles {
     font-weight: 700;
-    font-size: normal;
+    font-size: var(--font-size-normal);
 }
